bin_PROGRAMS = testblock test3d testbe testbg testbp
testblock_SOURCES = Block.cpp test_Block.cpp
testblock_CXXFLAGS = -std=c++11

test3d_SOURCES = Block.cpp BlockPart.cpp BlockGraph.cpp BlockEditor.cpp test_3d.cpp
test3d_CXXFLAGS = -std=c++11

testbp_SOURCES = Block.cpp BlockPart.cpp BlockGraph.cpp BlockEditor.cpp test_bp.cpp
testbp_CXXFLAGS = -std=c++11

testbe_SOURCES = Block.cpp BlockGraph.cpp BlockEditor.cpp test_be.cpp
testbe_CXXFLAGS = -std=c++11

testbg_SOURCES = Block.cpp BlockGraph.cpp test_bg.cpp
testbg_CXXFLAGS = -std=c++11
